--- a/SIU/.env
+++ b/SIU/.env
@@ -14,7 +14,7 @@
 # ENVIRONMENT
 #--------------------------------------------------------------------
 
-CI_ENVIRONMENT = DEVELOPMENT
+CI_ENVIRONMENT = development
 
 #--------------------------------------------------------------------
 # APP
