--- a/SIU/.env
+++ b/SIU/.env
@@ -33,7 +33,7 @@ DATABASE
 database.default.hostname = localhost
 database.default.database = siu_db
 database.default.username = root
-database.default.password = 
+database.default.password = root
 database.default.DBDriver = MySQLi
 database.default.DBPrefix =
 database.default.port = 3306
